objects/Travel_Product__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Expedia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WWTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotels</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Travel Products</relationshipLabel>
        <relationshipName>Travel_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TPID__c</fullName>
        <externalId>true</externalId>
        <label>TPID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Travel Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Travel Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>